--- a/Curso de Asincronismo con JavaScript/curso-asincronismo/package.json
+++ b/Curso de Asincronismo con JavaScript/curso-asincronismo/package.json
@@ -10,5 +10,8 @@
     "javascript"
   ],
   "author": "gilberto perez perezgarridogilb@gmail.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
+  }
 }
